<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go1sim_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Go1 simulation — launchers and configs</description>
  <maintainer email="gfabiopreziosa@gmail.com">fabio</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>go1_gazebo</exec_depend>
  <exec_depend>go1_description</exec_depend>
  <exec_depend>go1_navigation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>unitree_guide2</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
